@@ -48,6 +48,8 @@ static Rboolean wasopen;
 static int ttyflag;
 static int quiet;
 static SEXP NAstrings;
+static int comchar;
+#define NO_COMCHAR 100000 /* won't occur even in unicode */
 
 static char convbuf[100];
 
@@ -129,14 +131,21 @@ static Rcomplex strtoc(const char *nptr, char **endptr)
     return(z);
 }
 
-static int scanchar(void)
+static int scanchar(Rboolean inQuote)
 {
+    int next;
     if (save) {
 	int c = save;
 	save = 0;
 	return c;
     }
-    return (ttyflag) ? ConsoleGetchar() : Rconn_fgetc(con);
+    next = (ttyflag) ? ConsoleGetchar() : Rconn_fgetc(con);
+    if(next == comchar && !inQuote) {
+	do
+	    next = (ttyflag) ? ConsoleGetchar() : Rconn_fgetc(con);
+        while (next != '\n' && next != R_EOF);
+    }
+    return next;
 }
 
 static void unscanchar(int c)
@@ -173,6 +182,8 @@ static char * fillBuffer(SEXPTYPE type, int strip, int *bch)
 {
 /* The basic reader function, called from scanVector() and scanFrame().
    Reads into _buffer_	which later will be read out by extractItem().
+
+   bch is used to distinguish \n and EOF from more input available.
 */
     char *bufp;
     int c, quote, filled, nbuf = MAXELTSIZE, m;
@@ -182,7 +193,7 @@ static char * fillBuffer(SEXPTYPE type, int strip, int *bch)
     filled = 1;
     if (sepchar == 0) {
 	/* skip all white space */
-	while ((c = scanchar()) == ' ' || c == '\t')
+	while ((c = scanchar(FALSE)) == ' ' || c == '\t')
 	    ;
 	if (c == '\n' || c == '\r' || c == R_EOF) {
 	    filled = c;
@@ -190,22 +201,22 @@ static char * fillBuffer(SEXPTYPE type, int strip, int *bch)
 	}
 	if (type == STRSXP && strchr(quoteset, c)) {
 	    quote = c;
-	    while ((c = scanchar()) != R_EOF && c != quote) {
+	    while ((c = scanchar(TRUE)) != R_EOF && c != quote) {
 		if (m >= nbuf - 2) {
 		    nbuf *= 2;
 		    AllocBuffer(nbuf);
 		}
 		if (c == '\\') {
-		    c = scanchar();
+		    c = scanchar(TRUE);
 		    if (c == R_EOF) break;
 		    else if (c == 'n') c = '\n';
 		    else if (c == 'r') c = '\r';
 		}
 		buffer[m++] = c;
 	    }
-	    c = scanchar();
+	    c = scanchar(FALSE);
 	    while (c == ' ' || c == '\t')
-		c = scanchar();
+		c = scanchar(FALSE);
 	    if (c == '\n' || c == '\r' || c == R_EOF)
 		filled = c;
 	    else
@@ -218,9 +229,9 @@ static char * fillBuffer(SEXPTYPE type, int strip, int *bch)
 		    AllocBuffer(nbuf);
 		}
 		buffer[m++] = c;
-	    } while (!isspace(c = scanchar()) && c != R_EOF);
+	    } while (!isspace(c = scanchar(FALSE)) && c != R_EOF);
 	    while (c == ' ' || c == '\t')
-		c = scanchar();
+		c = scanchar(FALSE);
 	    if (c == '\n' || c == '\r' || c == R_EOF)
 		filled = c;
 	    else
@@ -228,13 +239,13 @@ static char * fillBuffer(SEXPTYPE type, int strip, int *bch)
 	}
     }
     else { /* have separator */
-	while ((c = scanchar()) != sepchar && c != '\n' && c != '\r'
+	while ((c = scanchar(FALSE)) != sepchar && c != '\n' && c != '\r'
 	      && c != R_EOF)
 	    {
 		/* eat white space */
 		if (type != STRSXP)
 		    while (c == ' ' || c == '\t')
-			if ((c=scanchar()) == sepchar || c == '\n' ||
+			if ((c = scanchar(FALSE)) == sepchar || c == '\n' ||
 			    c == '\r' || c == R_EOF) {
 			    filled = c;
 			    goto donefill;
@@ -243,14 +254,14 @@ static char * fillBuffer(SEXPTYPE type, int strip, int *bch)
 		if (type == STRSXP && strchr(quoteset, c)) {
 		    quote = c;
 		inquote:
-		    while ((c = scanchar()) != R_EOF && c != quote) {
+		    while ((c = scanchar(TRUE)) != R_EOF && c != quote) {
 			if (m >= nbuf - 2) {
 			    nbuf *= 2;
 			    AllocBuffer(nbuf);
 			}
 			buffer[m++] = c;
 		    }
-		    c = scanchar();
+		    c = scanchar(TRUE);
 		    if (c == quote) {
 			if (m >= nbuf - 2) {
 			    nbuf *= 2;
@@ -308,7 +319,7 @@ static void expected(char *what, char *got)
 {
     int c;
     if (ttyflag) {
-	while ((c = scanchar()) != R_EOF && c != '\n')
+	while ((c = scanchar(FALSE)) != R_EOF && c != '\n')
 	    ;
     }
     else
@@ -414,14 +425,14 @@ static SEXP scanVector(SEXPTYPE type, int maxitems, int maxlines,
 	    extractItem(buffer, ans, n);
 	    if (++n == maxitems) {
 		if (ttyflag && bch != '\n') {
-		    while ((c=scanchar()) != '\n')
+		    while ((c = scanchar(FALSE)) != '\n')
 			;
 		}
 		break;
 	    }
 	}
 	if (flush && (bch != '\n') && (bch != R_EOF)) {
-	    while ((c = scanchar()) != '\n' && (c != R_EOF));
+	    while ((c = scanchar(FALSE)) != '\n' && (c != R_EOF));
 	    bch = c;
 	}
     }
@@ -558,7 +569,7 @@ static SEXP scanFrame(SEXP what, int maxitems, int maxlines, int flush,
 		ii = 0;
 		colsread = 0;
 		if (flush && (bch != '\n') && (bch != R_EOF)) {
-		    while ((c = scanchar()) != '\n' && c != R_EOF);
+		    while ((c = scanchar(FALSE)) != '\n' && c != R_EOF);
 		    bch = c;
 		}
 		if (length(stripwhite) == length(what))
@@ -618,8 +629,9 @@ static SEXP scanFrame(SEXP what, int maxitems, int maxlines, int flush,
 
 SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    SEXP ans, file, sep, what, stripwhite, dec, quotes;
+    SEXP ans, file, sep, what, stripwhite, dec, quotes, comstr;
     int i, c, nlines, nmax, nskip, flush, fill, blskip, multiline;
+    char *p;
 
     checkArity(op, args);
 
@@ -637,7 +649,9 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
     stripwhite = CAR(args);	   args = CDR(args);
     quiet = asLogical(CAR(args));  args = CDR(args);
     blskip = asLogical(CAR(args)); args = CDR(args);
-    multiline = asLogical(CAR(args));
+    multiline = asLogical(CAR(args)); args = CDR(args);
+    comstr = CAR(args);
+
     if (quiet == NA_LOGICAL)			quiet = 0;
     if (blskip == NA_LOGICAL)			blskip = 1;
     if (multiline == NA_LOGICAL)		multiline = 1;
@@ -651,6 +665,8 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
 	errorcall(call, "invalid strip.white length");
     if (TYPEOF(NAstrings) != STRSXP)
 	errorcall(call, "invalid na.strings value");
+    if (TYPEOF(comstr) != STRSXP || length(comstr) != 1)
+	errorcall(call, "invalid comment.char value");
 
     if (isString(sep) || isNull(sep)) {
 	if (length(sep) == 0) sepchar = 0;
@@ -679,6 +695,10 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
     else
 	errorcall(call, "invalid quote symbol set");
 
+    p = CHAR(STRING_ELT(comstr, 0));
+    comchar = NO_COMCHAR; /*  here for -Wall */
+    if (strlen(p) > 1) errorcall(call, "invalid comment.char value");
+    else if (strlen(p) == 1) comchar = (int)*p;
 
     i = asInteger(file);
     if(i == 0) {
@@ -692,7 +712,7 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
 	    con->open(con);
 	}
 	for (i = 0; i < nskip; i++)
-	    while ((c = scanchar()) != '\n' && c != R_EOF);
+	    while ((c = scanchar(FALSE)) != '\n' && c != R_EOF);
     }
 
     ans = R_NilValue;		/* -Wall */
@@ -724,9 +744,10 @@ SEXP do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
 
 SEXP do_countfields(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    SEXP ans, file, sep,  bns, quotes;
+    SEXP ans, file, sep,  bns, quotes, comstr;
     int nfields, nskip, i, c, inquote, quote = 0;
     int blocksize, nlines, blskip;
+    char *p;
 
     checkArity(op, args);
 
@@ -734,7 +755,14 @@ SEXP do_countfields(SEXP call, SEXP op, SEXP args, SEXP rho)
     sep = CAR(args);	args = CDR(args);
     quotes = CAR(args);	 args = CDR(args);
     nskip = asInteger(CAR(args));  args = CDR(args);
-    blskip = asLogical(CAR(args));
+    blskip = asLogical(CAR(args)); args = CDR(args);
+    comstr = CAR(args);
+    if (TYPEOF(comstr) != STRSXP || length(comstr) != 1)
+	errorcall(call, "invalid comment.char value");
+    p = CHAR(STRING_ELT(comstr, 0));
+    comchar = NO_COMCHAR; /*  here for -Wall */
+    if (strlen(p) > 1) errorcall(call, "invalid comment.char value");
+    else if (strlen(p) == 1) comchar = (int)*p;
 
     if (nskip < 0 || nskip == NA_INTEGER) nskip = 0;
     if (blskip == NA_LOGICAL) blskip = 1;
@@ -769,7 +797,7 @@ SEXP do_countfields(SEXP call, SEXP op, SEXP args, SEXP rho)
 	    con->open(con);
 	}
 	for (i = 0; i < nskip; i++)
-	    while ((c = scanchar()) != '\n' && c != R_EOF);
+	    while ((c = scanchar(FALSE)) != '\n' && c != R_EOF);
     }
 
     blocksize = SCAN_BLOCKSIZE;
@@ -781,7 +809,7 @@ SEXP do_countfields(SEXP call, SEXP op, SEXP args, SEXP rho)
     save = 0;
 
     for (;;) {
-	c = scanchar();
+	c = scanchar(FALSE);
 	if (c == R_EOF)	 {
 	    if (nfields != 0)
 		INTEGER(ans)[nlines] = nfields;
@@ -824,7 +852,7 @@ SEXP do_countfields(SEXP call, SEXP op, SEXP args, SEXP rho)
 	else if (!isspace(c)) {
 	    if (strchr(quoteset, c)) {
 		quote = c;
-		while ((c=scanchar()) != quote) {
+		while ((c = scanchar(FALSE)) != quote) {
 		    if (c == R_EOF || c == '\n') {
 			if(!wasopen) con->close(con);
 			errorcall(call, "string terminated by newline or EOF");
@@ -832,7 +860,7 @@ SEXP do_countfields(SEXP call, SEXP op, SEXP args, SEXP rho)
 		}
 	    }
 	    else {
-		while (!isspace(c=scanchar()) && c != R_EOF)
+		while (!isspace(c = scanchar(FALSE)) && c != R_EOF)
 		    ;
 		if (c == R_EOF) c='\n';
 		unscanchar(c);
